--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
   </head>
   <body>
-    <video class="video hidden" autoplay style="height: 100vh; width: 100vw">
-      <source src="./assets/startVideo.mp4" type="video/mp4" />
+    <video class="video hidden" autoplay>
+      <source src="./assets/start.m4v" type="video/mp4" />
       <!-- <source src="movie.ogg" type="video/ogg" /> -->
       Your browser does not support the video tag.
     </video>
